manifest-files/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bankapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-targets: /
spec:
  ingressClassName: nginx
  rules:
   - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              services:
                name: my-service
                port:
                  number: 80
